--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/styled-components": "^4.1.15",
     "babel-plugin-styled-components": "^1.10.0",
     "electron": "^5.0.2",
     "npm-run-all": "^4.1.5",
