--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.1.15",
+    "@types/winreg": "^1.2.30",
     "babel-plugin-styled-components": "^1.10.0",
     "electron": "^5.0.2",
     "npm-run-all": "^4.1.5",
@@ -42,6 +43,7 @@
     "electron-is-dev": "^1.1.0",
     "ewc": "^0.0.1",
     "ewc-color": "^0.1.0",
-    "serialize-error": "^4.1.0"
+    "serialize-error": "^4.1.0",
+    "winreg": "^1.2.4"
   }
 }
