--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-konami-code": "^1.4.0",
     "rimraf": "^2.6.3",
     "styled-components": "^4.2.1",
     "tslint": "^5.17.0",
