--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "electron-is-dev": "^1.1.0",
+    "electron-updater": "^4.0.6",
     "ewc": "^0.0.1",
     "ewc-color": "^0.1.0",
     "execa": "^1.0.0",
