--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/execa": "^0.9.0",
     "@types/mkdirp": "^0.5.2",
+    "@types/mousetrap": "^1.6.2",
     "@types/node": "^12.0.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
@@ -46,6 +47,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "electron": "^5.0.2",
     "electron-builder": "^20.41.0",
+    "mousetrap": "^1.6.3",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.1",
